--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,21 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-item>
+      <ion-label position="floating">Base</ion-label>
+      <ion-input type="number" placeholder="Informe um valor para BASE." name="base" [(ngModel)]="base"></ion-input>
+    </ion-item>
+    
+    <ion-item>
+      <ion-label position="floating">Altura</ion-label>
+      <ion-input type="number" placeholder="Informe um valor para Altura." name="altura" [(ngModel)]="altura"></ion-input>
+    </ion-item>
+
+    <ion-button color="secondary" (click)="calcularArea()">Calcular</ion-button>
+    <br>
+    <ion-label>Resposta</ion-label>
+    <br>
+    <ion-label color="warning">{{resultado}}</ion-label>
+
   </div>
 </ion-content>
