--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,23 +12,6 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-button [routerLink]="['/home2']">Go to detail</ion-button>
 
-  <div id="container">
-    <ion-item>
-      <ion-label position="floating">Base</ion-label>
-      <ion-input type="number" placeholder="Informe um valor para BASE." name="base" [(ngModel)]="base"></ion-input>
-    </ion-item>
-    
-    <ion-item>
-      <ion-label position="floating">Altura</ion-label>
-      <ion-input type="number" placeholder="Informe um valor para Altura." name="altura" [(ngModel)]="altura"></ion-input>
-    </ion-item>
-
-    <ion-button color="secondary" (click)="calcularArea()">Calcular</ion-button>
-    <br>
-    <ion-label>Resposta</ion-label>
-    <br>
-    <ion-label color="warning">{{resultado}}</ion-label>
-
-  </div>
 </ion-content>
