--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,10 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-button [routerLink]="['/home2']">Go to detail</ion-button>
+
+  <ion-button [routerLink]="['/home2']">Triangulo</ion-button>
+  <ion-button [routerLink]="['/home3']">Quadrado</ion-button>
+  <ion-button [routerLink]="['/home4']">Hexagono</ion-button>
+  
 
 </ion-content>
