--- a/src/app/home2/home2.page.html
+++ b/src/app/home2/home2.page.html
@@ -1,15 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>home2</ion-title>
-    <ion-button [routerLink]="['/home']">Go to detail</ion-button>
+    <ion-title size="large">Calcular area do triangulo</ion-title>
+    <ion-button [routerLink]="['/home']">Voltar</ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">home2</ion-title>
-      <ion-button [routerLink]="['/home']">Go to detail</ion-button>
+      <ion-title size="large">Calcular area do triangulo</ion-title>
+      <ion-button [routerLink]="['/home']">Voltar</ion-button>
     </ion-toolbar>
   </ion-header>
 
