--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Calcular area de formas geometricas
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,13 +9,22 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Calcular area de formas geometricas</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <ion-button [routerLink]="['/home2']">Triangulo</ion-button>
-  <ion-button [routerLink]="['/home3']">Quadrado</ion-button>
-  <ion-button [routerLink]="['/home4']">Hexagono</ion-button>
+  <div id="container">
+
+    <h1>Opções de formas para calculo.</h1>
+
+  <ion-button color="warning" [routerLink]="['/home2']">Triangulo</ion-button>
+  <br>
+  <ion-button color="warning" [routerLink]="['/home3']">Quadrado</ion-button>
+  <br>
+  <ion-button color="warning" [routerLink]="['/home4']">Hexagono</ion-button>
+  <br>
+
+</div>
   
 
 </ion-content>
